# glutOpenInventor

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: codacy.yml  continuous-integration-workflow.yml
example1/: CMakeLists.txt  ReadMe.txt  main.cpp
from_glut-3.7/: CMakeLists.txt
